apps/overlays/prod/atlantis/shared-services/vault-namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    gateway.ninhu.xyz/internal-access: "true"
