apps/overlays/prod/atlantis/shared-services/vault-tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: vault
  namespace: vault
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: vault-tls
  hostnames:
    - vault.ninhu.xyz
  rules:
    - backendRefs:
        - name: vault-active
          port: 8200
